samples/_failures_safe/1761250610_609780_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37372f8f.c: In function ‘read_matrix_interactive’:
./samples/SAFE/__tmp_37372f8f.c:146:39: error: expected ‘)’ at end of input
  146 |         for (size_t j = 0; j < cols; j
      |             ~                         ^
      |                                       )
./samples/SAFE/__tmp_37372f8f.c:146:9: error: expected declaration or statement at end of input
  146 |         for (size_t j = 0; j < cols; j
      |         ^~~
./samples/SAFE/__tmp_37372f8f.c:146:9: error: expected declaration or statement at end of input
